--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ header::before{
     background-image: linear-gradient(60deg,rgb(2, 0, 17) 0px, rgb(7, 0, 75) 80%, rgb(11, 0, 115) 100%);
     border-bottom: 2px solid rgba(0, 131, 136, 0.3);
     box-shadow: rgb(0 0 0 / 50%) 5px 5px 10px 0px;
-    transition: ease-in-out 0.5s;
 }
 
 .logo{
@@ -53,7 +52,6 @@ header::before{
 
 .menu{
     flex-basis: 80%;
-    
 }
 
 .menu > ul{
@@ -123,7 +121,7 @@ li li {
     text-align: center;
     z-index: 100;
     cursor: pointer;
-    /*transition: color 0.5s ease-in;*/
+    transition: color 5s ease-in;
 }
 
 .hamburger > i{
@@ -664,13 +662,54 @@ h5{
         max-height: 138px;
     }
 }
+
 @media screen and  (max-width:800px){
     .contenedor{
         justify-content: center;
     }
 
     .menu{
-        display: none;
+        position: fixed;
+        background: linear-gradient(to right, #F9D423, #FF4E50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .contenedor{
+        transition:ease-in-out 5s;
+    }
+
+    .menu2{
+        clip-path: circle(0 at 100% 0);        
+    }
+
+    .menu > ul{
+        display: flex;
+        padding-top: 30px;
+        flex-direction: column;
+    }
+
+    .contenedor .menu ul li a {
+        font-family: 'Comfortaa', cursive;
+        color: rgb(235,232,255);
+        text-decoration: none;
+        padding: 20%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .menu ul li:hover ul {
+        text-align: center;
+        border-radius: 10px 10px 10px 10px;
+        font-size: 70%;
+        padding: 0px;
     }
 
     .hamburger{
