--- a/css/style.css
+++ b/css/style.css
@@ -456,7 +456,7 @@ h4{
     width: 100%;
     text-align: center;
     padding-bottom: 5%;
-    background: url("img/wall.jpg");
+    background: url("https://github.com/JhonKophler/JhonKophler.github.io/blob/master/img/wall.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
