--- a/css/style.css
+++ b/css/style.css
@@ -165,11 +165,11 @@ li li {
     animation-name: toBottom;
     animation-duration: 1s;
     position: fixed;
-    max-width: 426px;
-    max-height: 240px;
+    max-width: 383.4px;
+    max-height: 216px;
     width: 100%;
     height: 100%;
-    bottom: 25px;
+    bottom: 10px;
     right: 10px;
     z-index: 10;
 }
@@ -442,23 +442,24 @@ h4{
 
 
 .talento-emergente h3{
-    padding: 3%;
+    padding: 5%;
     animation: letra-talento 30s infinite alternate-reverse;
 }
 
 @keyframes letra-talento {
-    0%{color:#4e0733;}
-    35%{color:#03042e ;}
-    100%{color: #100f49;}
+    0%{color:#f5dd00;}
+    35%{color:#00ff2a ;}
+    100%{color: #ffa600;}
 }
 
 .talento-emergente{
     width: 100%;
     text-align: center;
     padding-bottom: 5%;
-    background: url("https://github.com/JhonKophler/JhonKophler.github.io/blob/master/img/wall.jpg");
-    background-repeat: no-repeat;
+    background: url("https://github.com/JhonKophler/JhonKophler.github.io/blob/master/img/wall.jpg?raw=true");
     background-attachment: fixed;
+    background-position: center center;
+    background-size: auto auto;
 }
 
 .texto{
@@ -470,10 +471,14 @@ h4{
     margin-left :auto;
     margin-right:auto;
     border-radius: 10px; 
-    padding: 3%;
-    background-color: rgba(255, 255, 255, 0.1) ;
-    backdrop-filter: blur(20px);
-    border: solid 1px rgba(255, 255, 255, 0.5);
+    padding: 7%;
+    background-color: rgba(48, 0, 63, 0.678) ;
+    border: solid 3px rgba(165, 235, 0, 0.5);
+    box-shadow: 0px 0px 50px 20px rgba(0, 255, 170, 0.5);
+}
+
+.talento-emergente .texto p{
+    color:rgb(165, 235, 0)
 }
 
 @keyframes rainbow-talento{
@@ -715,13 +720,6 @@ h5{
         margin-left: auto;
     }
 
-    #featured-video.is-sticky {
-        transform: translateY(0);
-        max-width: 244.95px;
-        max-height: 138px;
-        bottom: 50px;
-    }
-
     .content-media{
         padding-bottom: 56.20%;
     }
@@ -794,7 +792,6 @@ h5{
 }
 
 
-
 @media screen and (max-width: 1090px){
     
     .redes{
@@ -806,6 +803,13 @@ h5{
         top: auto;
         bottom: 30%;
         z-index: 0;
+    }
+
+    #featured-video.is-sticky {
+        transform: translateY(0);
+        max-width: 244.95px;
+        max-height: 138px;
+        bottom: 50px;
     }
 
     .pie{
