--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,8 @@ li li {
     background-color:rgb(0, 0, 0);
     display: block;
     width: 100%;
-    padding-bottom: 41.75%;
+    padding-bottom: 45.38%;
+
 }
 
 .content-media--video iframe{
@@ -552,29 +553,29 @@ h4{
 
 /* IR ARRIBA*/
 .irArriba{
-    padding-left: 10px;
+    bottom: 5px;
+    padding-left: 5px;
     position: fixed;
     z-index: 100;
-    bottom: 60px;
 }
 
 .irArriba i{
     cursor: pointer;
-    font-size: 30px;
+    font-size: 18px;
     color: rgb(12, 123, 167);
     background: #ff9100;
     display: inline-block;
-    padding: 10px;
-    animation: subir 1s alternate infinite ease-in;
+    padding: 5px;
+    animation: subir 2s alternate infinite ease-in;
 }
 
 .irArriba i:hover{
-    font-size: 30px;
+    font-size: 18spx;
     color: #ff9100;
     background: rgb(12, 123, 167);
     display: inline-block;
-    padding: 10px;
-    animation: subir 1s alternate infinite ease-in;
+    padding: 5px;
+    animation: subir 2s alternate infinite ease-in;
 }
 
 @keyframes subir{
@@ -584,7 +585,7 @@ h4{
         box-shadow: 0
     }
     to{
-        transform:translateY(-50%) ;
+        transform:translateY(-25%) ;
         border-radius: 50px;
         box-shadow: 10px 10px 5px 0 #000000;
     }
@@ -867,6 +868,11 @@ h5{
         max-width: 244.95px;
         max-height: 138px;
         bottom: 50px;
+    }
+
+    .irArriba{
+        bottom: 60px;
+        padding-left: 7px;
     }
 
     .pie{
