--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html{
     scroll-behavior: smooth;
 }
 section[id]{
-    scroll-margin-top: 143px;
+    scroll-margin-top: 119px;
 }
 
 span{
@@ -139,7 +139,7 @@ li li {
     background-color:rgb(0, 0, 0);
     display: block;
     width: 100%;
-    padding-bottom: 45.38%;
+    padding-bottom: 45.19%;
 
 }
 
@@ -563,7 +563,6 @@ form{
     background-color: rgba(111,75,240,0.2);
     padding: 10px 20px;
     box-sizing: border-box;
-    border-radius: 15px;
 }
 
 select,input,textarea{
@@ -586,7 +585,7 @@ textarea{
 #boton{
     background: var(--naranja);
     color: rgb(235,232,255);
-    padding: 5%;
+    padding: 2%;
 }
 
 #boton:hover{
@@ -799,7 +798,8 @@ h5{
         font-family: 'Comfortaa', cursive;
         text-decoration: none;
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-evenly;
+        width: 70px;
     }
 
     .menu ul li:hover ul {
@@ -812,6 +812,18 @@ h5{
     .hamburger{
         display: block;
         margin-left: auto;
+    }
+
+    h3{
+        font-size: 20px;
+    }
+
+    h2{
+        letter-spacing: 3px;
+    }
+
+    .txt-header{
+        top: 0px;
     }
 
     .content-media{
@@ -831,7 +843,7 @@ h5{
     }
 
     form{
-        width: 100%;
+        width: 80%;
     }
 
 
@@ -892,16 +904,36 @@ h5{
 
 
 @media screen and (max-width: 1090px){
-    
+
     .redes{
-        background-color: rgba(255, 255, 255, 0.1);
-        backdrop-filter: blur(20px);
+        background-color: rgba(15, 1, 1, 0.781);
+        backdrop-filter: blur(50px);
         flex-direction: column;
-        margin-left: 1%;
+        padding: 0px;
         position: fixed;
         top: auto;
-        bottom: 30%;
+        bottom: 39%;
         z-index: 0;
+        margin-left: 0px;
+    }
+
+    .insta{
+        padding: 0px;
+    }
+
+    .redes .insta i {
+        line-height: 36px;
+        margin: 0px;
+    }
+    
+    .redes .face i {
+        line-height: 36px;
+        margin: 0px;
+    }
+    
+    .redes .YT i {
+        line-height: 36px;
+        margin: 0px;
     }
 
     #featured-video.is-sticky {
@@ -921,7 +953,6 @@ h5{
     }
 
 }
-
 
 
 @media screen and (min-width: 1120px) {
