--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ li li {
     height: 100%;
     bottom: 10px;
     right: 10px;
-    z-index: 10;
+    z-index: 1;
 }
 
 @keyframes toBottom{
@@ -248,13 +248,10 @@ h2{
 .titulo{
     z-index: 0;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     width: 100%;
-    justify-content: space-between;
     padding-bottom: 4%;
     padding-top: 2%;
+    justify-content: space-between;
 }
 
 .titulo h3{
@@ -554,13 +551,13 @@ h4{
 /* Formulario */
 .frm{
     text-align: center;
-    background-color: rgb(134, 239, 243);
+    background-color: rgb(7, 0, 75);
+    z-index: 3;
 }
 
 form{
     margin: auto;
     width: 50%;
-    background-color: rgba(111,75,240,0.2);
     padding: 10px 20px;
     box-sizing: border-box;
 }
@@ -842,8 +839,13 @@ h5{
         text-align: center;
     }
 
+    .frm{
+        border: red 5px solid;
+    }
+
     form{
         width: 80%;
+        position: absolute;
     }
 
 
@@ -906,6 +908,7 @@ h5{
 @media screen and (max-width: 1090px){
 
     .redes{
+        border-radius: 20px;
         background-color: rgba(15, 1, 1, 0.781);
         backdrop-filter: blur(50px);
         flex-direction: column;
